refactor: Implementa data em inputs e forms, e validação de auth para ver botões específicos.

--- a/ControleDeCinema.WebApp/Views/Filme/Index.cshtml
+++ b/ControleDeCinema.WebApp/Views/Filme/Index.cshtml
@@ -6,12 +6,15 @@
     var notificacao = ViewData[nameof(NotificacaoViewModel)] as NotificacaoViewModel;
 }
 
-<p>
-    <a class="btn btn-primary px-4" asp-action="Cadastrar" data-se="btnCadastrar">
-        <i class="bi bi-plus"></i>
-        Cadastrar Novo/a
-    </a>
-</p>
+@if (User.IsInRole("Empresa"))
+{
+    <p>
+        <a class="btn btn-primary px-4" asp-action="Cadastrar" data-se="btnCadastrar">
+            <i class="bi bi-plus"></i>
+            Cadastrar Novo/a
+        </a>
+    </p>
+}
 
 <hr />
 
@@ -51,10 +54,10 @@
                         <a asp-action="Detalhes" asp-route-id="@registro.Id" class="btn btn-secondary rounded-circle card-option" title="Detalhes">
                             <i class="bi bi-search"></i>
                         </a>
-                        <a asp-action="Editar" asp-route-id="@registro.Id" class="btn btn-primary rounded-circle card-option" title="Edição">
+                        <a asp-action="Editar" asp-route-id="@registro.Id" class="btn btn-primary rounded-circle card-option" title="Edição" data-se="btnEditar">
                             <i class="bi bi-pencil-square"></i>
                         </a>
-                        <a asp-action="Excluir" asp-route-id="@registro.Id" class="btn btn-danger rounded-circle card-option" title="Exclusão">
+                        <a asp-action="Excluir" asp-route-id="@registro.Id" class="btn btn-danger rounded-circle card-option" title="Exclusão" data-se="btnExcluir">
                             <i class="bi bi-trash"></i>
                         </a>
                     </div>
