--- a/ControleDeCinema.WebApp/Views/Filme/Editar.cshtml
+++ b/ControleDeCinema.WebApp/Views/Filme/Editar.cshtml
@@ -9,26 +9,26 @@
     <div class="col-md-8">
         <div class="card rounded-4 border-0">
             <div class="card-body p-md-5">
-                <form asp-action="Editar" asp-route-id="@Model.Id">
+                <form asp-action="Editar" asp-route-id="@Model.Id" data-se="form">
                     <h3>Formulário de Edição</h3>
 
                     <partial name="_ValidationAlert"></partial>
 
                     <div class="form-group d-grid gap-2 mt-3">
                         <label asp-for="Titulo" class="control-label fs-5">Título:</label>
-                        <input asp-for="Titulo" class="form-control" />
+                        <input asp-for="Titulo" class="form-control" data-se="inputTitulo"/>
                         <span asp-validation-for="Titulo" class="text-danger"></span>
                     </div>
 
                     <div class="form-group d-grid gap-2 mt-3">
                         <label asp-for="Duracao" class="control-label fs-5">Duração:</label>
-                        <input asp-for="Duracao" class="form-control" type="number" min="0" />
+                        <input asp-for="Duracao" class="form-control" type="number" min="0" data-se="inputDuracao"/>
                         <span asp-validation-for="Duracao" class="text-danger"></span>
                     </div>
 
                     <div class="form-group d-grid gap-2 mt-3">
                         <div class="form-check">
-                            @Html.CheckBoxFor(x => x.Lancamento, new { @class = "form-check-input" })
+                            @Html.CheckBoxFor(x => x.Lancamento, new { @class = "form-check-input", data_se = "checkboxLancamento" })
                             <label asp-for="Lancamento" class="form-check-label">Lançamento</label>
                         </div>
                         <span asp-validation-for="Lancamento" class="text-danger"></span>
@@ -36,13 +36,13 @@
 
                     <div class="form-group d-grid gap-2 mt-3">
                         <label asp-for="GeneroId" class="control-label fs-5">Gênero do Filme:</label>
-                        <select asp-for="GeneroId" asp-items="@Model.GenerosDisponiveis" class="form-control"></select>
+                        <select asp-for="GeneroId" asp-items="@Model.GenerosDisponiveis" class="form-control" data-se="selectGenero"></select>
                         <span asp-validation-for="GeneroId" class="text-danger"></span>
                     </div>
 
                     <div class="form-group d-flex align-items-center justify-content-end gap-3 mt-5">
                         <a asp-action="Index">Voltar para a listagem</a>
-                        <button type="submit" class="btn btn-primary rounded-3 px-5">Confirmar</button>
+                        <button type="submit" class="btn btn-primary rounded-3 px-5" data-se="btnConfirmar">Confirmar</button>
                     </div>
                 </form>
             </div>
