--- a/ControleDeCinema.WebApp/Views/Ingresso/ComprarIngresso.cshtml
+++ b/ControleDeCinema.WebApp/Views/Ingresso/ComprarIngresso.cshtml
@@ -9,7 +9,7 @@
     <div class="col-md-8">
         <div class="card rounded-4 border-0">
             <div class="card-body p-md-5">
-                <form asp-action="ComprarIngresso">
+                <form asp-action="ComprarIngresso" data-se="form">
                     <h3>Formulário de Cadastro</h3>
 
                     <partial name="_ValidationAlert"></partial>
@@ -26,13 +26,13 @@
 
                     <div class="form-group d-grid gap-2 mt-3">
                         <label asp-for="Assento" class="control-label fs-5">Assento:</label>
-                        <select asp-for="Assento" asp-items="@Model.AssentosDisponiveis" class="form-select"></select>
+                        <select asp-for="Assento" asp-items="@Model.AssentosDisponiveis" class="form-select" data-se="selectAssento"></select>
                         <span asp-validation-for="Assento" class="text-danger"></span>
                     </div>
 
                     <div class="form-group d-grid gap-2 mt-3">
                         <div class="form-check">
-                            @Html.CheckBoxFor(x => x.MeiaEntrada, new { @class = "form-check-input" })
+                            @Html.CheckBoxFor(x => x.MeiaEntrada, new { @class = "form-check-input", data_se = "checkboxMeiaEntrada" })
                             <label asp-for="MeiaEntrada" class="form-check-label">Meia Entrada</label>
                         </div>
                         <span asp-validation-for="MeiaEntrada" class="text-danger"></span>
@@ -40,7 +40,7 @@
 
                     <div class="form-group d-flex align-items-center justify-content-end gap-3 mt-5">
                         <a asp-controller="Sessao" asp-action="Index">Voltar para a listagem</a>
-                        <button type="submit" class="btn btn-primary rounded-3 px-5">Confirmar</button>
+                        <button type="submit" class="btn btn-primary rounded-3 px-5" data-se="btnConfirmar">Confirmar</button>
                     </div>
                 </form>
             </div>
