--- a/ControleDeCinema.WebApp/Views/Sala/Cadastrar.cshtml
+++ b/ControleDeCinema.WebApp/Views/Sala/Cadastrar.cshtml
@@ -9,26 +9,26 @@
     <div class="col-md-8">
         <div class="card rounded-4 border-0">
             <div class="card-body p-md-5">
-                <form asp-action="Cadastrar">
+                <form asp-action="Cadastrar" data-se="form">
                     <h3>Formulário de Cadastro</h3>
 
                     <partial name="_ValidationAlert"></partial>
 
                     <div class="form-group d-grid gap-2 mt-3">
                         <label asp-for="Numero" class="control-label fs-5">Número:</label>
-                        <input asp-for="Numero" class="form-control" type="number" min="0" />
+                        <input asp-for="Numero" class="form-control" type="number" min="0" data-se="inputNumero"/>
                         <span asp-validation-for="Numero" class="text-danger"></span>
                     </div>
 
                     <div class="form-group d-grid gap-2 mt-3">
                         <label asp-for="Capacidade" class="control-label fs-5">Capacidade:</label>
-                        <input asp-for="Capacidade" class="form-control" type="number" min="0" />
+                        <input asp-for="Capacidade" class="form-control" type="number" min="0" data-se="inputCapacidade"/>
                         <span asp-validation-for="Capacidade" class="text-danger"></span>
                     </div>
 
                     <div class="form-group d-flex align-items-center justify-content-end gap-3 mt-5">
                         <a asp-action="Index">Voltar para a listagem</a>
-                        <button type="submit" class="btn btn-primary rounded-3 px-5">Confirmar</button>
+                        <button type="submit" class="btn btn-primary rounded-3 px-5" data-se="btnConfirmar">Confirmar</button>
                     </div>
                 </form>
             </div>
