--- a/ControleDeCinema.WebApp/Views/Sala/Excluir.cshtml
+++ b/ControleDeCinema.WebApp/Views/Sala/Excluir.cshtml
@@ -11,12 +11,12 @@
             <div class="card-body p-md-5">
                 <h3>Formulário de Exclusão</h3>
 
-                <p class="mt-4">Você deseja realmente excluir o registro # "@Model.Numero"?</p>
+                <p class="mt-4">Você deseja realmente excluir o registro #"@Model.Numero"?</p>
 
-                <form asp-action="Excluir" asp-route-id="@Model.Id">
+                <form asp-action="Excluir" asp-route-id="@Model.Id" data-se="form">
                     <div class="form-group d-flex align-items-center justify-content-end gap-3">
                         <a asp-action="Index">Voltar para a listagem</a>
-                        <button type="submit" class="btn btn-danger px-5">Confirmar</button>
+                        <button type="submit" class="btn btn-danger px-5" data-se="btnConfirmar">Confirmar</button>
                     </div>
                 </form>
             </div>
