refactor: Implementa data-se="..." em tags, corrige espaçamentos e nomenclaturas.

--- a/ControleDeCinema.WebApp/Views/Sala/Index.cshtml
+++ b/ControleDeCinema.WebApp/Views/Sala/Index.cshtml
@@ -40,10 +40,10 @@
                         <a asp-action="Detalhes" asp-route-id="@registro.Id" class="btn btn-secondary rounded-circle card-option" title="Detalhes">
                             <i class="bi bi-search"></i>
                         </a>
-                        <a asp-action="Editar" asp-route-id="@registro.Id" class="btn btn-primary rounded-circle card-option" title="Edição">
+                        <a asp-action="Editar" asp-route-id="@registro.Id" class="btn btn-primary rounded-circle card-option" title="Edição" data-se="btnEditar">
                             <i class="bi bi-pencil-square"></i>
                         </a>
-                        <a asp-action="Excluir" asp-route-id="@registro.Id" class="btn btn-danger rounded-circle card-option" title="Exclusão">
+                        <a asp-action="Excluir" asp-route-id="@registro.Id" class="btn btn-danger rounded-circle card-option" title="Exclusão" data-se="btnExcluir">
                             <i class="bi bi-trash"></i>
                         </a>
                     </div>
