--- a/ControleDeCinema.WebApp/Views/Shared/_NavbarPartial.cshtml
+++ b/ControleDeCinema.WebApp/Views/Shared/_NavbarPartial.cshtml
@@ -39,7 +39,7 @@
                 <ul class="dropdown-menu">
                     <li>
                         <form asp-controller="Autenticacao" asp-action="Logout" method="post">
-                            <button class="dropdown-item" type="submit">Logout</button>
+                            <button class="dropdown-item" type="submit" data-se="btnLogout">Logout</button>
                         </form>
                     </li>
                 </ul>
