--- a/ControleDeCinema.WebApp/Views/Sessao/Index.cshtml
+++ b/ControleDeCinema.WebApp/Views/Sessao/Index.cshtml
@@ -106,26 +106,26 @@
                         
                         @if (User.IsInRole("Empresa"))
                         {
-                            <a asp-action="Editar" asp-route-id="@registro.Id" class="btn btn-primary rounded-circle card-option" title="Edição">
+                            <a asp-action="Editar" asp-route-id="@registro.Id" class="btn btn-primary rounded-circle card-option" title="Edição" data-se="btnEditar">
                                 <i class="bi bi-pencil-square"></i>
                             </a>
 
                             @if (registro.Encerrada)
                             {
-                                <a asp-action="Excluir" asp-route-id="@registro.Id" class="btn btn-danger rounded-circle card-option" title="Exclusão">
+                                <a asp-action="Excluir" asp-route-id="@registro.Id" class="btn btn-danger rounded-circle card-option" title="Exclusão" data-se="btnExcluir">
                                     <i class="bi bi-trash"></i>
                                 </a>
                             }
                             else
                             {
-                                <a asp-action="Encerrar" asp-route-id="@registro.Id" class="btn btn-danger rounded-circle card-option" title="Encerrar">
+                                <a asp-action="Encerrar" asp-route-id="@registro.Id" class="btn btn-danger rounded-circle card-option" title="Encerrar" data-se="btnEncerrar">
                                     <i class="bi bi-calendar-x"></i>
                                 </a>
                             }
                         }
                         else if (User.IsInRole("Cliente"))
                         {
-                            <a asp-controller="Ingresso" asp-action="ComprarIngresso" asp-route-sessaoId="@registro.Id" class="btn btn-success rounded-circle card-option" title="Comprar Ingresso">
+                            <a asp-controller="Ingresso" asp-action="ComprarIngresso" asp-route-sessaoId="@registro.Id" class="btn btn-success rounded-circle card-option" title="Comprar Ingresso" data-se="btnComprarIngresso">
                                 <i class="bi bi-ticket-perforated"></i>
                             </a>
                         }
