--- a/ControleDeCinema.WebApp/Views/Sessao/Detalhes.cshtml
+++ b/ControleDeCinema.WebApp/Views/Sessao/Detalhes.cshtml
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="form-group d-flex align-items-center justify-content-end gap-3 mt-5">
-                    <a asp-action="Index">Voltar para a listagem</a>
+                    <a asp-action="Index" data-se="btnVoltar">Voltar para a listagem</a>
                 </div>
             </div>
         </div>
