--- a/ControleDeCinema.WebApp/Views/Sessao/Index.cshtml
+++ b/ControleDeCinema.WebApp/Views/Sessao/Index.cshtml
@@ -100,7 +100,7 @@
 
                     <div class="mt-auto d-flex gap-1 justify-content-end">
 
-                        <a asp-action="Detalhes" asp-route-id="@registro.Id" class="btn btn-secondary rounded-circle card-option" title="Detalhes">
+                        <a asp-action="Detalhes" asp-route-id="@registro.Id" class="btn btn-secondary rounded-circle card-option" title="Detalhes" data-se="btnDetalhes">
                             <i class="bi bi-search"></i>
                         </a>
                         
