--- a/ControleDeCinema.WebApp/Views/Sessao/Cadastrar.cshtml
+++ b/ControleDeCinema.WebApp/Views/Sessao/Cadastrar.cshtml
@@ -29,7 +29,7 @@
                     <div class="form-group d-grid gap-2 mt-3">
                         <label asp-for="FilmeId" class="control-label fs-5">Filme:</label>
                         <select asp-for="FilmeId" asp-items="@Model.FilmesDisponiveis" class="form-control" data-se="selectFilme"></select>
-                        <span asp-validation-for="FilmesDisponiveis" class="text-danger"></span>
+                        <span asp-validation-for="FilmeId" class="text-danger"></span>
                     </div>
 
                     <div class="form-group d-grid gap-2 mt-3">
