--- a/ControleDeCinema.WebApp/Views/Autenticacao/Registro.cshtml
+++ b/ControleDeCinema.WebApp/Views/Autenticacao/Registro.cshtml
@@ -40,10 +40,10 @@
                     </div>
 
                     <div class="form-group d-grid gap-2 mt-3">
-                        <label asp-for="ConfirmarSenha" class="control-label fs-5">Tipo de Usuário</label>
+                        <label asp-for="Tipo" class="control-label fs-5">Tipo de Usuário</label>
                         <select asp-for="Tipo" asp-items="@Html.GetEnumSelectList<TipoUsuario>()" class="form-select" data-se="selectTipoUsuario">
                         </select>
-                        <span asp-validation-for="ConfirmarSenha" class="text-danger"></span>
+                        <span asp-validation-for="Tipo" class="text-danger"></span>
                     </div>
 
                     <div class="form-group d-flex align-items-center justify-content-end gap-3 mt-5">
